align correct answer paragraph to center

--- a/style/introductionToDataModeling.css
+++ b/style/introductionToDataModeling.css
@@ -118,6 +118,7 @@
     margin: 3rem 0;
     font-size: 30px;
     font-weight: 500;
+    text-align: center;    
 }
 
 .submit:hover{
